# NdkDemo

./: settings.gradle
app/: build.gradle
app/libs/: ndklibrary-release.aar
app/src/androidTest/java/com/android/ndkdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/android/ndkdemo/: LibNDKDemo.java  MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
ndklibrary/src/androidTest/java/com/android/ndkdemo/: ExampleInstrumentedTest.java
ndklibrary/src/main/: AndroidManifest.xml
ndklibrary/src/main/res/values/: strings.xml
ndklibrary/src/test/java/com/android/ndkdemo/: ExampleUnitTest.java
